<resources>
    <string name="app_name">Week1Daily4Activities</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">ZIP</string>
    <string name="mailingInfo">Enter your Mailing Information below</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_activity_input">InputActivity</string>
    <string name="surrenderInfo">Click here to surrender you information</string>
</resources>
