<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mailingInfo"
        android:textSize="36sp"
        android:gravity="center"
        android:paddingTop="24dp"/>

    <TextView
        android:id="@+id/tvFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:textSize = "24sp"
        android:gravity="center"
        android:paddingTop="52dp"
        app:layout_constraintTop_toBottomOf="@id/tvTop"/>

    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:textSize = "24sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvFirstName"/>

    <TextView
        android:id="@+id/tvStreetAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:textSize = "24sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvLastName"/>

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:textSize = "24sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvStreetAddress"/>

    <TextView
        android:id="@+id/tvState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/state"
        android:textSize = "24sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvCity"/>

    <TextView
        android:id="@+id/tvZip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zip"
        android:textSize = "24sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvState"/>

    <Button
        android:id="@+id/btnSendInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/surrenderInfo"
        android:onClick="takeInputs"
        app:layout_constraintTop_toBottomOf="@id/tvZip"/>

</androidx.constraintlayout.widget.ConstraintLayout>