<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".InputActivity"
    tools:showIn="@layout/activity_input">

    <TextView
        android:id="@+id/tvTopTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mailingInfo"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="text"
        android:paddingTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/tvTop"/>

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/etFirstName"/>

    <EditText
        android:id="@+id/etStreetAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/etLastName"/>

    <EditText
        android:id="@+id/etCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/etStreetAddress"/>

    <EditText
        android:id="@+id/etState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/state"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/etCity"/>

    <EditText
        android:id="@+id/etZip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zip"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/etState"/>

    <Button
        android:id="@+id/btnSendInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit Information"
        android:onClick="sendInputs"
        app:layout_constraintTop_toBottomOf="@id/etZip"/>


</androidx.constraintlayout.widget.ConstraintLayout>